--- a/introsignup.css
+++ b/introsignup.css
@@ -30,3 +30,11 @@ fs-16 {
 .poppins {
     font-family: 'Poppins', sans-serif;
 }
+
+/* Footer Styles */
+.attribution { 
+    font-size: 11px; text-align: center; 
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
